--- a/Mobile Development/StickerSmash/app.json
+++ b/Mobile Development/StickerSmash/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "hello",
-    "slug": "hello",
+    "name": "StickerSmash",
+    "slug": "StickerSmash",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
